# BewerbLens

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_REPORT.md  README.md  docker-compose.yml  protection_payload.json  requirements.txt  start-chrome-debug.sh
.agents/: Agents.md
.do/: app.dev.yaml  app.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
apps/tracker/: .env.example  .gitignore  README.md  classifier_base.py  classifier_factory.py  config.py  failure_handler.py  failure_handler.py:Zone.Identifier  fix_korber.py  fuzzy_matcher.py  gemini_classifier.py  gmail_service.py  link_bot.py  migrate_gmail.py  models.py  pipeline_logger.py  pre_filter.py  pyproject.toml  scheduler.py  schema.sql  schema_v2.sql  supabase_service.py  telegram_notifier.py  tracker.py  usage_metrics.py
apps/tracker/.github/workflows/: tracker.yml
apps/tracker/migrations/: README.md  migration_0006_atomic_claim.sql  migration_0007_status_history.sql  migration_v3.sql  migration_v4_durability_final.sql  migration_v4_steps_logs.sql  schema.sql  schema_orchestration_v3.sql
apps/tracker/tests/: conftest.py  test_config_runtime.py  test_fuzzy_match.py  test_gemini_parser.py  test_gmail_service.py  test_koerber.py  test_pre_filter.py  test_status_logic.py  test_tracker_runtime.py
docs/: api.md  architecture.md  deployment.md  pipeline.md  troubleshooting.md
implementation-plan/: ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_PLAN.md  TASK_LIST.md  (+1 more)
(+146 files in other folders)
